syntax = "proto3";

package p2p;

option go_package = "/types/";

message ConsensusMessage {
  bytes data = 1;
}